# Rust-Debug-Error

./: Cargo.toml  LICENSE.txt  readme.md
examples/: basic_usage.rs  real_world_scenario.rs
src/: error.rs  lib.rs
